--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,8 @@ body {
     transform: translateX(-100%);
   }
 
-  /* ... + .carousel-item:not(:last-child) ~ .carousel-item:last-child - to handle 2 and 3 images carousels*/
-  .carousel-item.active:first-child:not(.carousel-item-start) + .carousel-item:not(:last-child) + .carousel-item:not(:last-child) ~ .carousel-item:last-child:not(.carousel-item-end) {
+  /* ...  ~ .carousel-item:nth-child(3) ~ - to exclude 2 and 3 images carousels*/
+  .carousel-item.active:first-child:not(.carousel-item-start) ~ .carousel-item:nth-child(3) ~ .carousel-item:last-child:not(.carousel-item-end) {
     display: block;
     transform: translateX(-100%);
   }
@@ -131,7 +131,8 @@ body {
     transform: translateX(200%);
   }
 
-  .carousel-inner:has(.carousel-item.active:last-child) .carousel-item:first-child + .carousel-item  + .carousel-item {
+  /* :has(.carousel-item:nth-child(5)) - only apply if more then 4 images in carousel */
+  .carousel-inner:has(.carousel-item:nth-child(5)):has(.carousel-item.active:last-child) .carousel-item:first-child + .carousel-item  + .carousel-item {
     display: block;
     transform: translateX(300%);
   }
@@ -144,14 +145,16 @@ body {
   }
 
   /* .carousel-item:first-child + .carousel-item:not(:last-child) - to handle only 2 images carousel*/
+  /* :has(.carousel-item:nth-child(5)) - only apply if more then 4 images in carousel */
   /* .carousel-inner:has(.carousel-item.active:nth-last-child(2)) .carousel-item:first-child + .carousel-item:not(.active):not(:last-child) { */
-  .carousel-inner:has(.carousel-item.active:not(.carousel-item-start):not(.carousel-item-end) + .carousel-item:not(.active):last-child) .carousel-item:first-child + .carousel-item:not(.active):not(:last-child) {
+  .carousel-inner:has(.carousel-item:nth-child(5)):has(.carousel-item.active:not(.carousel-item-start):not(.carousel-item-end) + .carousel-item:not(.active):last-child) .carousel-item:first-child + .carousel-item:not(.active):not(:last-child) {
     display: block;
     transform: translateX(300%);
   }
 
   /* :not(.active) - to handle only 3 images in carousel */
-  .carousel-inner:has(.carousel-item.active:nth-last-child(3)) .carousel-item:first-child:not(.active) {
+  /* :has(.carousel-item:nth-child(5)) - only apply if more then 4 images in carousel */
+  .carousel-inner:has(.carousel-item:nth-child(5)):has(.carousel-item.active:nth-last-child(3)).carousel-item:first-child:not(.active) {
     display: block;
     transform: translateX(300%);
   }
@@ -277,6 +280,25 @@ body {
     display: block;
     transform: translateX(100%);
   } */
+
+  /** NEXT BUTTON: 4 images in carousel **/
+  /* if next button click & first image is active - instantly move last image to the end) */
+  .carousel:has(.carousel-control-next:active) .carousel-item.active:not(.carousel-item-start):first-child ~ .carousel-item:nth-child(4):last-child {
+    display: block;
+    transform: translateX(300%);
+    transition: all 0s;
+  }
+    /* if next button click & image is active - instantly move previous image to the end */
+  .carousel:has(.carousel-control-next:active) .carousel-inner:has(.carousel-item:nth-child(4):last-child) .carousel-item:has(+ .carousel-item.active:not(.carousel-item-start)) {
+    display: block;
+    transform: translateX(300%);
+    transition: all 0s
+  }
+  .carousel-item.active.carousel-item-start:first-child ~ .carousel-item:nth-child(4):last-child {
+    display: block;
+    transform: translateX(200%);
+  }
+  
 
   /** Disable images rotation when there are only 2 images in carousel **/
   .carousel-inner:has(.carousel-item:first-child + .carousel-item:last-child) .carousel-item:first-child {
